2003-04-06 Araki Ken <arakiken@users.sf.net>

	* Added "cp1251" and "cp1255" encodings.

2003-04-06 Araki Ken <arakiken@users.sf.net>

	* The message mlclient -P outputs is easier to understand. 

2003-04-05 Tomohiro KUBOTA <kubota@debian.org>

	* Clean up mlterm/ml_vt100_parser.c config_protocol_save(),
	  removed a possibility of free(NULL).

2003-04-02  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: fixed another color conversion bug...

2003-04-01  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c:
	 - last change caused a X error. reverted.
	 - fixed a bug in color conversion.
	
2003-04-01 Tomohiro KUBOTA <kubota@debian.org>

	* tool/mlconfig/mc_char_encoding.c: mlconfig supports "GEORGIAN-PS"
	  and "KOI8-T".
	* tool/mlconfig/main.c: write in the label that "font larger"
	  and "font smaller" doesn't modify (save) configuration files.
	* Updated "po" (gettext) files for the above modification.
	* man/mlterm.1: mentions these two encodings and
	  "-%" and "-$" options.

2003-03-31  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_imagelib_gdk.c: minor code cleanup.

2003-03-30 Araki Ken <arakiken@users.sf.net>

	* Added "georgian-ps" and "koi8-t" encodings.

2003-03-30 Tomohiro KUBOTA <kubota@debian.org>

	* A patch contributed by Mike Fabian to fix unstability in
	  64 bit platforms, by changing "0" into "NULL".
	* $(SYSCONFDIR)/mlterm/menu was not read even when
	  $(HOME)/.mlterm/menu isn't available.  Fixed.

2003-03-29 Araki Ken <arakiken@users.sf.net>

	* Output cvs revision of ChangeLog by mlterm -v.

2003-03-28 Araki Ken <arakiken@users.sf.net>

	* If a shell exited in a screen, the screen could be closed
	  even if other background ptys left. Fixed.

2003-03-26 Araki Ken <arakiken@users.sf.net>

	* Mlterm died as soon as the shell exited while screen region being selected. Fixed.

2003-03-26 Tomohiro KUBOTA <kubota@debian.org>

	* Updated tool/mlconfig/po/de.po
	  (Thanks to Mike Fabian).
